--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,7 +264,7 @@ img {
     content: "";
     width: 100%;
     height: 70%;
-    background: linear-gradient(rgba(var(--c-brand-rgb), 0.8), rgba(var(--c-brand-rgb), 0.8)), url(../images/counter.jpg);
+    background: linear-gradient(rgba(var(--c-brand-rgb), 0.8), rgba(var(--c-brand-rgb), 0.8)), url(../images/advocacia-01.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
