--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,16 @@ img {
 }
 
 /* SERVICE */
+/*
+#services {
+    background: linear-gradient(rgba(var(--c-brand-rgb), 0.8), rgba(var(--c-brand-rgb), 0.8)), url(../images/hand-shake-1.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: 1;
+}
+*/
 .service {
     position: relative;
     overflow: hidden;
